2018-06-07  Danilo Chang  <ray2501@gmail.com>

    * generic/tclmdb.c: Add cursor_handle getBinary command to test.
      For "Use byte arrays for keys and values" request.

2018-05-03  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2018-03-27  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2017-11-24  Danilo Chang  <ray2501@gmail.com>

    * Setup version to v0.3.6 to test

2017-11-23  Danilo Chang  <ray2501@gmail.com>

    * Merge gahr's solution
      Fix Segfault when you use an env without opening it

2017-11-10  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2017-08-03  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2017-03-24  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2017-01-12  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.
    * generic/tclmdb.c: Update year

2017-01-04  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2016-12-22  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2016-12-17  Danilo Chang  <ray2501@gmail.com>

    * Update TEA files

2016-09-09  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2016-08-19  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2016-07-03  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.
      Solaris 10/11 robust mutex fixes (ITS#8339)
      init cursor in mdb_env_cwalk (ITS#8424)

2016-05-10  Danilo Chang  <ray2501@gmail.com>

    * Setup version to v0.3.5 to test
    * Fix overflow of a nearby variable on the stack
      patch from gahr (merge code)

2016-05-09  Danilo Chang  <ray2501@gmail.com>

    * Chase gcc 4.8 warning patch from gahr (merge code)

2016-05-07  Danilo Chang  <ray2501@gmail.com>
